some alignment issues

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,9 @@
   width: 3px;
   background-color: black;
 }
+body{
+  font-family: Montserrat!important;
+}
 
 ::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(151, 151, 151, 0.356);
@@ -752,7 +755,6 @@ Note: Beware of modifying this element as it can break the animations - you shou
   font-family: Metro;
   font-weight: 900;
   padding-top: 2em;
-  font-style: italic;
 }
 .feedback {
   padding-top: 6em;
@@ -789,6 +791,8 @@ Note: Beware of modifying this element as it can break the animations - you shou
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   height: 30px;
   width: 10em;
+  font-weight: 600;
+  padding-top: 5px;
   text-align: center;
   margin-top: 5vh;
 }
@@ -801,6 +805,9 @@ Note: Beware of modifying this element as it can break the animations - you shou
   width: 3.4em;
 }
 @media screen and (max-width: 786px) {
+  .footer-logo{
+    width:50vw!important;
+  }
   .rating {
     padding-top: 4em !important;
   }
@@ -1119,9 +1126,10 @@ body {
     padding: unset;
     padding: 1em;
   }
-  .accnt-gnrl {
-    padding: 2em;
+  .prof-detail {
+    width: 100%;
   }
+  
   .table-content tr,
   td {
     padding-left: unset !important;
@@ -1162,7 +1170,9 @@ body {
 
 /* STYLES FOR HOME */
 
-
+.ant-picker-panel-container .ant-picker-panel {
+  width:90%!important;
+}
 .home {
   width: 100%;
   height: auto;
@@ -1841,6 +1851,15 @@ body {
 .carousel .thumbs-wrapper {
   display: none !important;
 }
+.trending-thread p{
+  height:9vh;
+  overflow: hidden;
+  line-height: 20px;
+  width: 90%;
+}
+.forum-timing{
+  text-align: right;
+}
 
 @media screen and (max-width: 786px) {
   .footer-secondary {
@@ -1883,11 +1902,11 @@ body {
     bottom: -4px !important;
   }
   .testcar h3 {
-    font-size: 20px;
+    font-size: 17px;
     font-weight: bold;
   }
   .testcar p {
-    font-size: 10px !important;
+    font-size: 9px !important;
   }
   .newnav {
     display: none;
@@ -1930,7 +1949,7 @@ body {
     /* justify-content: center;
     align-items: center; */
     padding: 0;
-    padding: 3em 1em 2em 1em;
+    margin: 3em 1em 2em 1em;
   }
   .home-second-part1 h1 {
     font-size: 64px !important;
@@ -2017,6 +2036,7 @@ body {
   }
   .footer-primary {
     justify-content: space-evenly;
+    padding:7em 0 7em 0;
   }
   .footer-logo img {
     width: 7em;
@@ -2600,7 +2620,8 @@ a:not([href]):not([tabindex]) {
     padding-top: 3em;
   }
   .forum-threads {
-    padding: 2em !important;
+    padding: 1em     !important;
+    margin-bottom: 10vh!important;
   }
   .trending-thread p {
     font-size: 10px !important;
